--- a/poem63.html
+++ b/poem63.html
@@ -31,6 +31,7 @@
           <li><a href="poem61.html">一一〇七</a></li>
           <li><a href="poem62.html">泪的告白</a></li>
           <li><a href="poem63.html">在你身后</a></li>
+		  <li><a href="poem81.html">女神赋</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -118,7 +119,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem62.html" title="泪的告白">泪的告白</a></p>
-      <p>下一篇：<a >无</a></p>
+      <p>下一篇：<a href="poem81.html" title="女神赋">女神赋</a></p>
       <p> </p>
       <p> </p>
     </div>
