--- a/poem81.html
+++ b/poem81.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>如同</title>
+<title>女神赋</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -64,14 +64,14 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 如同</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 女神赋</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">如同</h3>
+      <h3 class="news_title" style="text-align:center;">女神赋</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">文青</li>
-          <li class="lmname">不诉离殇</li>
+          <li class="lmname">女神赋</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -79,29 +79,41 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
+		<div class="news_about" style="text-align:center;">一生一世一双人，半醉半醒半浮生。</div>
+		明眸皓齿 粉面柔膝<br>
+		蛾眉螓首 玉质冰肌<br>
 		<br>
-		遇见你如同遇见一场马拉松<br>
-		加速的心拥有了魔鬼的冲动<br>
+		香腮胜雪 素腕凝霜<br>
+		如花解语 似玉生香<br>
 		<br>
-		恋上你如同恋上一朵罂粟花<br>
-		让我在缭绕的花香中苦苦挣扎<br>
+		白裙长发 文静优雅<br>
+		沉鱼落雁 闭月羞花<br>
 		<br>
-		想念你如同想念一轮满月<br>
-		把忧伤化作满地明媚的雪<br>
+		梳云掠月 流风回雪<br>
+		绯红荡漾 幽然婉约<br>
 		<br>
-		忘记你如同忘记一场秋雨<br>
-		颓圮的大地上不着落一丝痕迹<br>
+		敛声屏气 杏花春雨<br>
+		温山软水 仙姿旖旎<br>
+		<br>
+		巧笑美目 褐瞳曼睩<br>
+		纤纤莲步 清歌妙舞<br>
+		<br>
+		翩若惊鸿 宛如游龙<br>
+		荣曜秋菊 华茂春松<br>
+		<br>
+		回首笑靥 倩影缱绻<br>
+		吾定奋发 不负韶颜<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/48.jpg"><br>
+        <img alt="" src="images/poem/81.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem47.html" title="那时红颜">那时红颜</a></p>
-      <p>下一篇：<a href="poem49.html" title="太阳坠落">太阳坠落</a></p>
+      <p>上一篇：<a href="poem63.html" title="我一直在你身后">我一直在你身后</a></p>
+      <p>下一篇：<a >无</a></p>
       <p> </p>
       <p> </p>
     </div>
