--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="poem61.html">一一〇七</a></li>
           <li><a href="poem62.html">泪的告白</a></li>
           <li><a href="poem63.html">在你身后</a></li>
+          <li><a href="poem81.html">女神赋</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
