--- a/anime01.html
+++ b/anime01.html
@@ -73,7 +73,7 @@
         <ul>
           <li class="author">江南无蝶</li>
           <li class="lmname">动漫</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
