--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -121,7 +121,7 @@
         <ul>
           <li class="author">Godxv</li>
           <li class="lmname">算法</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -136,9 +136,9 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -154,7 +154,7 @@
         <ul>
           <li class="author">Godxv</li>
           <li class="lmname">Java</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -169,9 +169,9 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -187,9 +187,9 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -204,9 +204,9 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -222,9 +222,9 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -240,9 +240,9 @@
 		我一个人嚣张<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">孤单成瘾</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
