--- a/lol01.html
+++ b/lol01.html
@@ -72,7 +72,7 @@
         <ul>
           <li class="author">丿神鬼妖仙</li>
           <li class="lmname">五杀</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
