--- a/poem0.html
+++ b/poem0.html
@@ -79,9 +79,9 @@
 		没有脚步的声响</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -98,9 +98,9 @@
 		轮回几十番</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -115,9 +115,9 @@
 		红色许世界和平 <br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -132,9 +132,9 @@
 		<br>西山的日暮</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -149,9 +149,9 @@
 		请你不要不要，脸颊羞红<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
