--- a/poem4.html
+++ b/poem4.html
@@ -77,9 +77,9 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -94,9 +94,9 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -112,9 +112,9 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -130,9 +130,9 @@
 		在梦里失眠<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -147,9 +147,9 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -165,9 +165,9 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -183,9 +183,9 @@
 		用一生守候 百个春秋 等一瞬回头<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -201,9 +201,9 @@
 		让我在缭绕的花香中苦苦挣扎<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -219,9 +219,9 @@
 		还有数不完的星星和寂寞<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
@@ -237,9 +237,9 @@
 		水不冲也会抹擦<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
