--- a/pubg01.html
+++ b/pubg01.html
@@ -72,7 +72,7 @@
         <ul>
           <li class="author">RKYBoy</li>
           <li class="lmname">吃鸡</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
