--- a/code01.html
+++ b/code01.html
@@ -72,7 +72,7 @@
         <ul>
           <li class="author">Godxv</li>
           <li class="lmname">算法</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
