--- a/ow01.html
+++ b/ow01.html
@@ -72,7 +72,7 @@
         <ul>
           <li class="author">十乂</li>
           <li class="lmname">源氏</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
