--- a/poem32.html
+++ b/poem32.html
@@ -70,9 +70,9 @@
       <h3 class="news_title" style="text-align:center;">塞北少孽</h3>
       <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
