--- a/poem46.html
+++ b/poem46.html
@@ -70,9 +70,9 @@
       <h3 class="news_title" style="text-align:center;">归隐</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">文青</li>
+          <li class="author">九日旭</li>
           <li class="lmname">不诉离殇</li>
-          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
