--- a/poem81.html
+++ b/poem81.html
@@ -32,6 +32,7 @@
           <li><a href="poem62.html">泪的告白</a></li>
           <li><a href="poem63.html">在你身后</a></li>
 		  <li><a href="poem81.html">女神赋</a></li>
+		  <li><a href="poem82.html">朝发夕诗</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -71,7 +72,7 @@
       <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">九日旭</li>
-          <li class="lmname">女神赋</li>
+          <li class="lmname">朝发夕诗</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -113,7 +114,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem63.html" title="我一直在你身后">我一直在你身后</a></p>
-      <p>下一篇：<a >无</a></p>
+      <p>下一篇：<a href="poem82.html" title="朝发夕诗">朝发夕诗</a></p>
       <p> </p>
       <p> </p>
     </div>
