--- a/code02.html
+++ b/code02.html
@@ -32,6 +32,7 @@
           <li><a href="poem62.html">泪的告白</a></li>
           <li><a href="poem63.html">在你身后</a></li>
 		  <li><a href="poem81.html">女神赋</a></li>
+		  <li><a href="poem82.html">朝发夕诗</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
