--- a/poem45.html
+++ b/poem45.html
@@ -25,9 +25,14 @@
       <li><a href="index.html">我的首页</a> </li>
       <li><a >我的诗</a>
         <ul class="sub-nav">
-          <li><a href="poem01.html">遇见花开</a></li>
-          <li><a href="poem02.html">人生如梦</a></li>
-          <li><a href="poem51.html">还记得</a></li>
+          <li><a href="poem0.html">待成追忆</a></li>
+          <li><a href="poem4.html">不诉离殇</a></li>
+          <li><a href="poem5.html">孤单成瘾</a></li>
+          <li><a href="poem61.html">一一〇七</a></li>
+          <li><a href="poem62.html">泪的告白</a></li>
+          <li><a href="poem63.html">在你身后</a></li>
+		  <li><a href="poem81.html">女神赋</a></li>
+		  <li><a href="poem82.html">朝发夕诗</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
