--- a/poem82.html
+++ b/poem82.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>每一句都是谎言</title>
+<title>朝发夕诗</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 		  <li><a href="anime01.html">动漫</a></li>
 		  <li><a href="movie01.html">悬疑</a></li>
 		  <li><a href="">待开发3</a></li>
-          <li><a href="">待开发4</a></li>
+		  <li><a href="">待开发4</a></li>
         </ul>
       </li>
 	  <li><a >我的游戏</a>
@@ -65,14 +65,14 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 每一句都是谎言</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 朝发夕诗</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">每一句都是谎言</h3>
+      <h3 class="news_title" style="text-align:center;">朝发夕诗</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">九日旭</li>
-          <li class="lmname">不诉离殇</li>
+          <li class="lmname">朝发夕诗</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -80,43 +80,34 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <div class="news_about" style="text-align:center;">前言：说好的冬雷震震夏雨雪乃敢与君绝，已成了捕风捉影镜花水月。</div>
-		在夏天看雪<br>
-		在冬天听雷<br>
-		在雨里哭泣<br>
-		在梦里失眠<br>
+		<div class="news_about" style="text-align:center;">心血来潮翻自己的语文摘抄本，看见自己以前写的这什么玩意儿？(Ｔ▽Ｔ)</div>
+		《南乡子·抒豪情》<br>
+		命途且多舛，人道注定多劫难。自古天作才姻缘？非然！我命由我不由天。<br>
+		豪情满怀愁，剑指命运扼咽喉。刀山火海谁敢走？高某！打遍天下无敌手。<br>
 		<br>
-		在家里流浪<br>
-		在红尘中徜徉<br>
-		向着人群呐喊<br>
-		我是国王<br>
+		《单身好》<br>
+		单身好，纯洁最重要。纵使百花身边绕，祸水倾城皆不尿。洁身以自好。<br>
+		单身好，自由价更高。无牵无挂浮云飘，孤身醉酒自逍遥。肯被无情扰。<br>
+		单身好，最后是无伤。玫瑰有刺粟毒药，谁持快刀百一了。何处无芳草。<br>
 		<br>
-		摘下镜中的花朵<br>
-		一瓣一瓣缭绕着心的方向<br>
-		捞起水中的月亮<br>
-		一点一滴消失了你的脸庞<br>
+		《钗头凤·相见欢》<br>
+		三春秋，各自谋，天南地北不相留。多年散，相见欢，觥筹交错，把酒言欢。干、干、干。<br>
+		人情暖，晓风寒，相见时难别亦难。残云卷，泪阑干，宴席终散，疏人离慢。念、念、念。<br>
 		<br>
-		追捕遗失的芳香<br>
-		你的美吹到了远方<br>
-		捉住迷蒙的影像<br>
-		你的笑驱散了浅殇<br>
-		<br>
-		为你戴上古格斯戒指<br>
-		给你披上皇帝的新装<br>
-		还有很真诚的对你撒谎<br>
-		我不爱你，我只要去<br>
-		追求我的理想<br>
+		《丑奴儿·好好学习》<br>
+		灯光扑朔眼迷离，倦意来袭。倦意来袭，魂牵梦萦心智迷。<br>
+		为占鳌头重整旗，好好学习。好好学习，莫待皓首晚来急。<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/44.jpg"><br>
+        <img alt="" src="images/poem/82.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem43.html" title="捉迷藏">捉迷藏</a></p>
-      <p>下一篇：<a href="poem45.html" title="寂夜">寂夜</a></p>
+      <p>上一篇：<a href="poem81.html" title="女神赋">女神赋</a></p>
+      <p>下一篇：<a >无</a></p>
       <p> </p>
       <p> </p>
     </div>
