--- a/poem21.html
+++ b/poem21.html
@@ -28,11 +28,8 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
-		  <li><a href="poem81.html">女神赋</a></li>
-		  <li><a href="poem82.html">朝发夕诗</a></li>
+           <li><a href="poem6.html">朝发夕诗</a></li>
+		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -71,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">七色花</h3>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -127,7 +124,10 @@
         <a href="poem01.html">遇见花开</a>
 		<a href="poem02.html">人生如梦</a> 
 		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
+		<a href="poem81.html">女神赋</a> 
+		<a href="poem82.html">朝发夕诗</a> 
+		<a href="poem91.html">梦的倒影</a> 
+		<a href="poem54.html">静夜思</a> 
         <a href="poem31.html">埋葬柔情</a> 
 		<a href="poem61.html">一一〇七</a> 
 		<a href="poem44.html">每一句都是谎言</a> 
