--- a/poem6.html
+++ b/poem6.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>待成追忆</title>
+<title>朝发夕诗</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -63,22 +63,19 @@
 </header>
 <div class="pagebg sh"></div>
 <div class="container">
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 待成追忆</span><a href="" class="n1">网站首页</a><a href="" class="n2">待成追忆</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 朝发夕诗</span><a href="" class="n1">网站首页</a><a href="" class="n2">朝发夕诗</a></h1>
   <!--blogsbox begin-->
   <div class="blogsbox">
   
     <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem01.html" >遇见花开</a></h3>
-      <span class="blogpic"><a href="poem01.html" title=""><img src="images/poem/01.jpg" alt=""></a></span>
-      <p class="blogtext">黑暗的楼廊
-		<br>
-		我独自凝望
-		<br>
-		没有脚步的声响</p>
+      <h3 class="blogtitle"><a href="poem61.html" >一一〇七</a></h3>
+      <span class="blogpic"><a href="poem61.html" title=""><img src="images/poem/61.jpg" alt=""></a></span>
+      <p class="blogtext">宫中不胜那广寒，嫦娥姐姐来下凡。<br>
+		寂月无雨，未知雨佳。<br>一章雨过，清新无沙。<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -87,34 +84,16 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem02.html" >人生如梦</a></h3>
-      <span class="blogpic"><a href="poem02.html" title=""><img src="images/poem/02.jpg" alt=""></a></span>
-      <p class="blogtext">时光的流转
-        <br>
-		仿佛木马一般
-        <br>
-		轮回几十番</p>
+      <h3 class="blogtitle"><a href="poem62.html" >泪的告白</a></h3>
+      <span class="blogpic"><a href="poem62.html" title=""><img src="images/poem/62.jpg" alt=""></a></span>
+      <p class="blogtext">我曾看过  夏季下雪<br>
+		我曾听过  冬天打雷<br>
+		你不知道我  在梦里也会失眠<br>
+		你看不见我  在雨里哭泣<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
-          <li class="timer">2000-00-00</li>
-          <li class="view">99已阅读</li>
-          <li class="like">99</li>
-        </ul>
-      </div>
-    </div>
-	
-	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem21.html" >七色花</a></h3>
-      <span class="blogpic"><a href="poem21.html" title=""><img src="images/poem/21.jpg" alt=""></a></span>
-      <p class="blogtext">上天赐我一朵七色花 <br>
-		让美丽的愿望许在花季<br>
-		红色许世界和平 <br></p>
-      <div class="bloginfo">
-        <ul>
-          <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -123,15 +102,15 @@
     </div>
 	
     <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem31.html" >埋葬柔情</a></h3>
-      <span class="blogpic"><a href="poem31.html" title=""><img src="images/poem/31.jpg" alt=""></a></span>
-      <p class="blogtext">你决绝的脚步
-		<br>是我心的桎梏
-		<br>西山的日暮</p>
+      <h3 class="blogtitle"><a href="poem63.html" >我一直在你身后</a></h3>
+      <span class="blogpic"><a href="poem63.html" title=""><img src="images/poem/63.jpg" alt=""></a></span>
+      <p class="blogtext">街角的路灯把我们的影子轻轻摇晃<br>
+		学校对面的奶茶店悠悠的飘着奶香<br>
+		老旧的屋檐上滴下的雨叮咚作响</p>
       <div class="bloginfo">
         <ul>
           <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
+          <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -140,15 +119,33 @@
     </div>
 	
 	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
-      <h3 class="blogtitle"><a href="poem32.html" >塞北少孽</a></h3>
-      <span class="blogpic"><a href="poem32.html" title=""><img src="images/poem/32.jpg" alt=""></a></span>
-      <p class="blogtext">乌云斜风乱雨，疏叶梧桐<br>
-		同学可不可以，抬头挺胸<br>
-		请你不要不要，脸颊羞红<br></p>
+      <h3 class="blogtitle"><a href="poem81.html" >女神赋</a></h3>
+      <span class="blogpic"><a href="poem81.html" title=""><img src="images/poem/81.jpg" alt=""></a></span>
+      <p class="blogtext">明眸皓齿 粉面柔膝<br>
+		蛾眉螓首 玉质冰肌<br>
+		香腮胜雪 素腕凝霜<br></p>
       <div class="bloginfo">
         <ul>
           <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
+          <li class="lmname">朝发夕诗</li>
+          <li class="timer">2000-00-00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem82.html" >朝发夕诗</a></h3>
+      <span class="blogpic"><a href="poem82.html" title=""><img src="images/poem/82.jpg" alt=""></a></span>
+      <p class="blogtext">《南乡子·抒豪情》<br>
+		《单身好》<br>
+		《钗头凤·相见欢》<br>
+		《丑奴儿·好好学习》<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">九日</li>
+          <li class="lmname">朝发夕诗</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
@@ -162,14 +159,11 @@
     <div class="zhuanti">
       <h2 class="hometitle">特别推荐</h2>
       <ul>
-        <li> <i><img src="images/poem/01.jpg"></i>
-          <p>遇见花开 <span><a href="poem01.html">阅读</a></span> </p>
+        <li> <i><img src="images/poem/81.jpg"></i>
+          <p>女神赋 <span><a href="poem81.html">阅读</a></span> </p>
         </li>
-        <li> <i><img src="images/poem/02.jpg"></i>
-          <p>人生如梦<span><a href="poem02.html">阅读</a></span></p>
-        </li>
-        <li> <i><img src="images/poem/31.jpg"></i>
-          <p>埋葬柔情<span><a href="poem31.html">阅读</a></span></p>
+        <li> <i><img src="images/poem/63.jpg"></i>
+          <p>我一直在你身后<span><a href="poem/63.html">阅读</a></span></p>
         </li>
       </ul>
     </div>
@@ -186,7 +180,7 @@
         <a href="poem31.html">埋葬柔情</a> 
 		<a href="poem61.html">一一〇七</a> 
 		<a href="poem44.html">每一句都是谎言</a> 
-		<a href="poem4.html">待成追忆</a>
+		<a href="poem4.html">不诉离殇</a>
 		<a href="poem5.html">孤单成瘾</a>
 		<a href="poem42.html">鱼水情</a>
 		<a href="poem43.html">捉迷藏</a>
