--- a/poem63.html
+++ b/poem63.html
@@ -28,11 +28,8 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
-		  <li><a href="poem81.html">女神赋</a></li>
-		  <li><a href="poem82.html">朝发夕诗</a></li>
+           <li><a href="poem6.html">朝发夕诗</a></li>
+		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -71,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">我一直在你身后</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -80,8 +77,8 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<div class="news_about" style="text-align:center;">词：文青 曲：暂无</div>
-		街角的路灯把我的影子轻轻摇晃<br>
+		<div class="news_about" style="text-align:center;">词：九日 曲：暂无</div>
+		街角的路灯把我们的影子轻轻摇晃<br>
 		学校对面的奶茶店悠悠的飘着奶香<br>
 		老旧的屋檐上滴下的雨叮咚作响<br>
 		深巷里的梧桐树打碎了斑驳太阳<br>
@@ -112,7 +109,7 @@
 		没有安慰 没有念想<br>
 		<br>
 		<center>
-        <img alt="" src="images/poem/55.jpg"><br>
+        <img alt="" src="images/poem/63.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
@@ -132,7 +129,10 @@
         <a href="poem01.html">遇见花开</a>
 		<a href="poem02.html">人生如梦</a> 
 		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
+		<a href="poem81.html">女神赋</a> 
+		<a href="poem82.html">朝发夕诗</a> 
+		<a href="poem91.html">梦的倒影</a> 
+		<a href="poem54.html">静夜思</a> 
         <a href="poem31.html">埋葬柔情</a> 
 		<a href="poem61.html">一一〇七</a> 
 		<a href="poem44.html">每一句都是谎言</a> 
