--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
-          <li><a href="poem81.html">女神赋</a></li>
-          <li><a href="poem82.html">朝发夕诗</a></li>
+           <li><a href="poem6.html">朝发夕诗</a></li>
+          <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -73,6 +70,8 @@
       <li class="slide" ><a href="poem51.html"><img src="images/poem/51.jpg"><span class="imginfo">还记得</span></a></li>
       <li class="slide" ><a href="poem54.html"><img src="images/poem/54.jpg"><span class="imginfo">静夜思</span></a></li>
       <li class="slide" ><a href="poem44.html"><img src="images/poem/44.jpg"><span class="imginfo">每一句都是谎言</a></li>
+      <li class="slide" ><a href="poem63.html"><img src="images/poem/63.jpg"><span class="imginfo">我一直在你身后</a></li>
+      <li class="slide" ><a href="poem91.html"><img src="images/poem/91.jpg"><span class="imginfo">梦的倒影</a></li>
       <div class="fader_controls">
         <div class="page prev" data-target="prev">&lsaquo;</div>
         <div class="page next" data-target="next">&rsaquo;</div>
@@ -104,7 +103,7 @@
         <br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -137,7 +136,7 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -170,7 +169,7 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -188,7 +187,7 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -205,7 +204,7 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -223,7 +222,7 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -241,7 +240,7 @@
 		我一个人嚣张<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
