--- a/movie01.html
+++ b/movie01.html
@@ -29,11 +29,8 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
-		  <li><a href="poem81.html">女神赋</a></li>
-		  <li><a href="poem82.html">朝发夕诗</a></li>
+           <li><a href="poem6.html">朝发夕诗</a></li>
+		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
