--- a/poem4.html
+++ b/poem4.html
@@ -28,11 +28,8 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-          <li><a href="poem61.html">一一〇七</a></li>
-          <li><a href="poem62.html">泪的告白</a></li>
-          <li><a href="poem63.html">在你身后</a></li>
-		  <li><a href="poem81.html">女神赋</a></li>
-		  <li><a href="poem82.html">朝发夕诗</a></li>
+           <li><a href="poem6.html">朝发夕诗</a></li>
+		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
       <li><a >我的代码</a>
@@ -78,7 +75,7 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -95,7 +92,7 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -113,7 +110,7 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -131,7 +128,7 @@
 		在梦里失眠<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -148,7 +145,7 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -166,7 +163,7 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -184,7 +181,7 @@
 		用一生守候 百个春秋 等一瞬回头<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -202,7 +199,7 @@
 		让我在缭绕的花香中苦苦挣扎<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -220,7 +217,7 @@
 		还有数不完的星星和寂寞<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -238,7 +235,7 @@
 		水不冲也会抹擦<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日旭</li>
+          <li class="author">九日</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -270,7 +267,10 @@
         <a href="poem01.html">遇见花开</a>
 		<a href="poem02.html">人生如梦</a> 
 		<a href="poem51.html">还记得</a>
-        <a href="poem54.html">静夜思</a> 
+		<a href="poem81.html">女神赋</a> 
+		<a href="poem82.html">朝发夕诗</a> 
+		<a href="poem91.html">梦的倒影</a> 
+		<a href="poem54.html">静夜思</a> 
         <a href="poem31.html">埋葬柔情</a> 
 		<a href="poem61.html">一一〇七</a> 
 		<a href="poem44.html">每一句都是谎言</a> 
