--- a/poem91.html
+++ b/poem91.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>遇见花开</title>
+<title>梦的倒影</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -62,93 +62,91 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 遇见花开</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 梦的倒影</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">遇见花开</h3>
-      <div class="bloginfo">
+      <h3 class="news_title" style="text-align:center;">梦的倒影</h3>
+      <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">九日</li>
-          <li class="lmname">待成追忆</li>
+          <li class="lmname">梦的倒影</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
- 
-      <div class="news_about" style="text-align:center;"><strong>原题：</strong>遇见花开遇见你，不知是否在心底</div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-        <br>
-        黑暗的楼廊
+		<div class="news_about" style="text-align:center;">看来还没有荒废(ノへ￣、)</div>
 		<br>
-		我独自凝望
+		飞鸟吃光了海草
 		<br>
-		没有脚步的声响
+		金鱼吐出了九片云
 		<br>
-		气氛是如此的安详
+		星星把草原点燃
 		<br>
+		微风驱赶着羊群
 		<br>
-		一步步的寻迹
+
 		<br>
-		一点点的遗忘
+		萤火虫雨夜中追寻
 		<br>
-		忘记了梦想
+		走在冰川上的游轮
 		<br>
-		和你的模样
+		漂泊在人世间的灵魂
 		<br>
+		津津乐道着家常和人伦
 		<br>
-		拾级而上
+
 		<br>
-		踱步在这黑暗的楼廊
+		念经的人为情所困
 		<br>
-		夜晚的颜色
+		孩子把爸妈教训
 		<br>
-		也会如此的芬芳
+		我是个十足的恶棍
 		<br>
+		偏偏有遇上你的好运
 		<br>
-		转身，回望
+
 		<br>
-		遗忘的台阶上
+		子时落下的雨
 		<br>
-		尽是你笑的模样
+		落进了我的梦里
 		<br>
+		在这个光怪陆离的梦里
 		<br>
-		路漫漫
+		窥视着不为人知的秘密
 		<br>
-		怎可驻足眼前
+
 		<br>
-		回望的瞬间
+		瞎子欣赏着哑剧
 		<br>
-		是否心中万般的依恋
+		饿狼与羊群嬉戏
 		<br>
+		太阳从西方升起
 		<br>
-		月虽明
+		又消失在天际
 		<br>
-		却伤尽繁星点点
+
 		<br>
-		醉眼空前
+		并不美丽的相遇
 		<br>
-		安厝以待千年
+		大大小小的脾气
 		<br>
+		和温柔可爱的你
 		<br>
-		轮回再转
-		<br>
-		下一世
-		<br>
-		梦的眼前 
-		<br>
-		<br>
+		还依然在一起
+		<br><br>
 		<center>
-        <img alt="" src="images/poem/01.jpg"><br>
+        <img alt="" src="images/poem/91.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a>无</a></p>
-      <p>下一篇：<a href="poem02.html" title="人生如梦">人生如梦</a></p>
+      <p>上一篇：<a href="poem82.html" title="朝发夕诗">朝发夕诗</a></p>
+      <p>下一篇：<a >无</a></p>
       <p> </p>
       <p> </p>
     </div>
