--- a/poem91.html
+++ b/poem91.html
@@ -77,7 +77,7 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<div class="news_about" style="text-align:center;">看来还没有荒废(ノへ￣、)</div>
+		<div class="news_about" style="text-align:center;">空间的反转->意义的反转->时间的反转，相遇即分离</div>
 		<br>
 		飞鸟吃光了海草
 		<br>
