--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -136,7 +136,7 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -169,7 +169,7 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -187,7 +187,7 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -204,7 +204,7 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -222,7 +222,7 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -240,7 +240,7 @@
 		我一个人嚣张<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
