--- a/poem63.html
+++ b/poem63.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">我一直在你身后</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -77,7 +77,7 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<div class="news_about" style="text-align:center;">词：九日 曲：暂无</div>
+		<div class="news_about" style="text-align:center;">词：九命 曲：暂无</div>
 		街角的路灯把我们的影子轻轻摇晃<br>
 		学校对面的奶茶店悠悠的飘着奶香<br>
 		老旧的屋檐上滴下的雨叮咚作响<br>
