--- a/poem0.html
+++ b/poem0.html
@@ -77,7 +77,7 @@
 		没有脚步的声响</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -96,7 +96,7 @@
 		轮回几十番</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -113,7 +113,7 @@
 		红色许世界和平 <br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -130,7 +130,7 @@
 		<br>西山的日暮</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -147,7 +147,7 @@
 		请你不要不要，脸颊羞红<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
