--- a/poem53.html
+++ b/poem53.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">情圣</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九日</li>
+          <li class="author">九命</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
