--- a/about0.html
+++ b/about0.html
@@ -70,10 +70,23 @@
 	  <br />
       <h2>专业技能</h2>
         <br />
-        还没想好。<br />
+        本科毕业于<strong>大连理工大学</strong>，专业<strong>软件工程</strong>，主修课程：
+		<strong>C</strong>、<strong>C++</strong>、<strong>数据结构与算法</strong>、计算机组织与结构、编译技术、
+		<strong>计算机网络</strong>、<strong>操作系统</strong>、软件项目管理、C#.NET
+		开发、<strong>数据库系统</strong>、<strong>软件工程</strong>、UML、系统分析与设计、设计模式、软件开发案例分析、软件测试与质量保证、
+		离散数学、可视化与可视化分析、数据库程序设计、网络信息安全 ... ...
+		<br />
+		<br />
+        在北京<strong>凤凰网</strong>实习半年，端茶送水打打杂，顺便负责视频标题关键词提取服务的设计实现和优化；
+		采用 <strong>JSP+Tomcat</strong> 搭建了各类文本处理算法的展示平台；上线爬取新闻地域识别服务；
+		搭建了各类训练数据与 <strong>Kafka</strong> 数据库对接的 <strong>http</strong> 服务；负责词语重要度的计算；
+		定时处理文章质量评分和广告识别日志的服务并把结果写进 <strong>Redis</strong> 中；
+		定时从百度搜索风云榜<strong>爬取</strong>热搜词的任务；从 www.poi86.com 上抓取 <strong>POI</strong> 信息并进行筛选和清洗。<br />
+        <br />
+        自学了<strong>Java Python HTML JS CSS JSP</strong>等。其他的，英语六级飘过，office有啥不会的就搜呗。<br />
         <br />
 		github主页：https://gaodongxu.github.io/（就是此网站）<br />
-		CSDN 博客：<a href="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
+		 CSDN 博客：<a href="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
 		微信公众号：没BUG（扫一扫，关注我￣ω￣= ）<br />
 		微信小程序：没BUG（扫一扫，关注我￣ω￣= ）<br />
 		<br /><center>
@@ -105,8 +118,8 @@
     <div class="about">
       <p class="avatar"> <img src="images/avatar.jpg" alt=""> </p>
       <p class="abname">HighEast9Sun | 高东旭</p>
-      <p class="abposition">不想写自我介绍</p>
-      <p class="abtext">懒得写自我介绍</p>
+      <p class="abposition">啥都会一点 包括不限于</p>
+      <p class="abtext">C C++ C# Java Python SQL HTML JS CSS JSP Redis Kafka ...</p>
     </div>
     <div class="weixin">
       <h2 class="hometitle">微信关注</h2>
