--- a/anime01.html
+++ b/anime01.html
@@ -79,6 +79,33 @@
 	  
 	  <center>
 	  <br>
+	  
+	  <hr style="height:12px;border:none;border-top:5px groove skyblue;" />
+	  <br>
+	  <h2>罗小黑战记</h2>
+	  <div class="news_about" style="text-align:center;">雨夜，一只流落街头的小黑猫，被少女罗小白带回家，起名罗小黑。罗小黑不是一只普通的猫咪，
+	  它极通人性，会蹲马桶，不吃猫粮，长长的尾巴甚至能分裂成多个名为“黑咻”的生物体。另一方面，名为“谛听”的神秘人物，发动手下三匹长着翅膀的狼，
+	  搜寻着罗小黑的下落。不久，罗小白带着小黑到乡下探望堂哥阿根和爷爷，由此发生了种种离奇玄幻事件。
+	  </div>
+	  <img alt="" src="images/tv/lxhzj02.jpg"><br>
+	  <div id="hyxhn" class="news_con" style="text-align:center;">
+		现在就看，B站链接：<a href="https://www.bilibili.com/bangumi/media/md1733" target="_blank">https://www.bilibili.com/bangumi/media/md1733</a>
+      </div>
+      <br>
+	  
+	  <hr style="height:12px;border:none;border-top:5px groove skyblue;" />
+	  <br>
+	  <h2>刺客伍六七</h2>
+	  <div class="news_about" style="text-align:center;">在某个小岛上，有一个可以伪装成任何东西的廉价刺客，名叫伍六七。伍六七平时看上去是个理发师，
+	  其实背地里却做着刺客生意。他热爱理发事业，喜欢给人剪头发，善用剪刀——剪刀也是他的刺杀武器。由于初入刺客行当，行情十分廉价，
+	  因此接到的都是些奇葩的刺杀任务。在完成刺杀任务的过程中，他常与刺杀对象发生一系列有趣的意外事件，每次任务都被搞得乱七八糟
+	  </div>
+	  <img alt="" src="images/tv/ckwlq02.jpg"><br>
+	  <div id="hyxhn" class="news_con" style="text-align:center;">
+		现在就看，B站链接：<a href="https://www.bilibili.com/bangumi/media/md6360" target="_blank">https://www.bilibili.com/bangumi/media/md6360</a>
+      </div>
+      <br>
+	  
 	  <h2>狐妖小红娘</h2>
 	  <div class="news_about" style="text-align:center;">根据古典小说记载，世上有人有妖，妖会与人相恋，妖寿命千年，人的寿命有限，人死了，
 	  妖活着。人会投胎转世，但投胎以后不记得上辈子的爱。妖如果痴情的话，就去找狐妖“购买”一项服务，让投胎转世的人回忆起前世的爱……狐妖红娘这个角色就为此而诞生。
@@ -92,7 +119,7 @@
       </div>
 	  <br/>
 	  
-	  <hr id="yrzx" style="height:12px;border:none;border-top:5px groove skyblue;" />
+	  <hr style="height:12px;border:none;border-top:5px groove skyblue;" />
 	  <br>
 	  <h2>一人之下</h2>
 	  <div class="news_about" style="text-align:center;">这个世界是存在异人的。 张楚岚就是一个隐藏在普通人中的异人。
@@ -109,6 +136,7 @@
 		转到【关于我】页面，关注我的微信公众号，回复【狐妖】或【一人之下】即可获得漫画资源。<br>
 		资源来源于二次元集结地漫画福利，获取更多二次元漫画资源敬请关注二次元集结地漫画福利。
       </div>
+	  
 	</div>
 	</center>
     <div class="nextinfo">
