--- a/poem4.html
+++ b/poem4.html
@@ -75,7 +75,7 @@
 		<br>等到秋风凋尽了芬芳 蟋蟀踏损了枯黄</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -92,7 +92,7 @@
 		我站在断桥上，西湖边<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -110,7 +110,7 @@
 		一双玉足浣水流<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -128,7 +128,7 @@
 		在梦里失眠<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -145,7 +145,7 @@
 		把你明亮的双眸暗窥<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -163,7 +163,7 @@
 		煮一壶清茶嗅香<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -181,7 +181,7 @@
 		用一生守候 百个春秋 等一瞬回头<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -199,7 +199,7 @@
 		让我在缭绕的花香中苦苦挣扎<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -217,7 +217,7 @@
 		还有数不完的星星和寂寞<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -235,7 +235,7 @@
 		水不冲也会抹擦<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">不诉离殇</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
