--- a/poem5.html
+++ b/poem5.html
@@ -75,7 +75,7 @@
 		老旧的屋檐上滴下的雨叮咚作响<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -93,7 +93,7 @@
 		我一个人嚣张<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -110,7 +110,7 @@
 		你用烽火戏诸侯<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -128,7 +128,7 @@
 		海角淹没了天涯<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -146,7 +146,7 @@
 		乱点了姻缘<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
