--- a/poem6.html
+++ b/poem6.html
@@ -74,7 +74,7 @@
 		寂月无雨，未知雨佳。<br>一章雨过，清新无沙。<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -92,7 +92,7 @@
 		你看不见我  在雨里哭泣<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -109,7 +109,7 @@
 		老旧的屋檐上滴下的雨叮咚作响</p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -126,7 +126,7 @@
 		香腮胜雪 素腕凝霜<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">朝发夕诗</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -144,7 +144,7 @@
 		《丑奴儿·好好学习》<br></p>
       <div class="bloginfo">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">朝发夕诗</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
