--- a/poem62.html
+++ b/poem62.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">泪的告白</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">天涯海角</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
@@ -78,7 +78,7 @@
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
 		<div class="news_about" style="text-align:center;">曲：KOKIA-ありがとう<br>
-		中文填词：九命<br>
+		中文填词：九曰<br>
 		第一行是日文歌词<br>
 		第二行是中文歌词<br></div>
 		<br>
