--- a/poem31.html
+++ b/poem31.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">埋葬柔情</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">待成追忆</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
