--- a/poem52.html
+++ b/poem52.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">能够遗忘，才不悲伤</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
