--- a/poem83.html
+++ b/poem83.html
@@ -68,7 +68,7 @@
       <h3 class="news_title" style="text-align:center;">我有一个梦想</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
-          <li class="author">九命</li>
+          <li class="author">九曰</li>
           <li class="lmname">我有一个梦想</li>
           <li class="timer">2018-12-31</li>
           <li class="view">99已阅读</li>
